fix scrollbar issues

--- a/amp_conf/htdocs/admin/assets/less/freepbx/page.less
+++ b/amp_conf/htdocs/admin/assets/less/freepbx/page.less
@@ -215,6 +215,7 @@ span.twitter-typeahead .tt-dropdown-menu {
 		bottom: 10px;
 		z-index: 5;
 		white-space: nowrap;
+		overflow: hidden;
 		#action-bar-hide {
 			padding: 0px;
 			width: 14px;
